# Scorpio

./: AGENTS.md  README.md  docker-compose.yml  turbo.json
.github/: DEPENDABOT_README.md  copilot-instructions.md  dependabot.yml
.github/workflows/: dependabot-auto-approve.yml  dependabot-tests.yml  dependabot.yml  lint.yml
backend/: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_dev.py
backend/app/: main.py
backend/app/core/: config.py  logging.py
backend/app/domain/models/: agent.py  core.py  organization.py  session.py  task.py
backend/app/domain/models/base/: models.py
backend/app/domain/services/: agent.py  agent_service.py  analytics.py  orchestrator.py  session.py  task.py
backend/app/domain/services/base/: service.py
backend/app/domain/services/tools/: executor.py
backend/app/infrastructure/: cache.py  config.py  database.py
backend/app/infrastructure/llm/: anthropic_client.py  base_client.py  gemini_client.py  openai_client.py
backend/app/interfaces/api/: __init__.py  automation.py  router.py
backend/app/interfaces/api/v1/: routes.py
backend/app/interfaces/api/v1/endpoints/: __init__.py  chat.py  files.py  sessions.py  tools.py
backend/tests/: conftest.py
backend/tests/domain/models/: test_agent.py
backend/tests/domain/services/tools/: test_executor.py
backend/tests/interfaces/api/v1/: test_chat.py  test_files.py  test_tools.py
components/: easter-egg-provider.tsx
